test2/k8s/minimal-ingress/test-micro-ingress/test-script.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: shell
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: shell
    spec:
      containers:
        - name: kubectl
          image: costinm/kubectl:release-1.1-latest-daily
          command: [ "/bin/bash"]
          args:
            - -c
            - >-
              [...]
